main file name changed to index.html

--- a/science.html
+++ b/science.html
@@ -51,7 +51,7 @@
                 </ul>
             </div>
             <div class="right-bottom">
-                <h3>You might also like...</h3>
+                <p>You might also like...</p>
             </div>
         </div>
         <div class="bottom">
