--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="canonical" href="main.html">
     <title>lr1_serhiichuk_ip-21</title>
 </head>
@@ -14,7 +14,7 @@
         <div class="top">
             <h1>HOT NEWS</h1>
             <ul class="menu">
-                <li><a href="main.html">Main</a></li>
+                <li><a href="index.html">Main</a></li>
                 <li><a href="science.html">Science</a></li>
                 <li><a href="sport.html">Sport</a></li>
                 <li><a href="climate.html">Climate</a></li>
@@ -52,7 +52,7 @@
                 </ul>
             </div>
             <div class="right-bottom">
-                <h3>You might also like...</h3>
+                <p>You might also like...</p>
             </div>
         </div>
         <div class="bottom">
