--- a/science.html
+++ b/science.html
@@ -14,7 +14,7 @@
         <div class="top">
             <h1>HOT NEWS</h1>
             <ul class="menu">
-                <li><a href="main.html">Main</a></li>
+                <li><a href="index.html">Main</a></li>
                 <li><a href="science.html">Science</a></li>
                 <li><a href="sport.html">Sport</a></li>
                 <li><a href="climate.html">Climate</a></li>
